# Catalyst

./: .gitignore  Cargo.toml  LICENSE
config/: default.toml
src/: app.rs  main.rs
src/core/: config.rs  mod.rs  state.rs
src/core/engine/: dispatcher.rs  mod.rs  query_engine.rs  ranking.rs
src/core/model/: action.rs  mod.rs  result_item.rs
src/core/plugin/: context.rs  mod.rs  registry.rs  trait.rs  trigger.rs
src/platform/: mod.rs
src/platform/windows/: app_index.rs  hotkey.rs  mod.rs
src/plugins/: mod.rs
src/plugins/explicit/: clipboard.rs  dictionary.rs  ip.rs  mod.rs  terminal.rs  testing_explicit.rs
src/plugins/implicit/: app_search.rs  calculator.rs  exit.rs  mod.rs  system_commands.rs  testing_implicit.rs  web_search.rs
src/ui/: mod.rs
src/ui/components/: mod.rs  result_list.rs  result_row.rs  search_bar.rs
src/ui/views/: mod.rs
