# Cargo.toml
[package]
name = "launcher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# GPUI - UI Framework
adabraka-ui = "0.3.5"
# gpui = "0.2.2"
# [patch.crates-io]
gpui = {package = "adabraka-gpui", version = "0.5.1"}
# gpui-component = "0.5.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Logging
log = "0.4"
env_logger = "0.11.9"

# Error Handling
anyhow = "1.0"
thiserror = "2.0.18"

# Math Evaluation (for calculator)
meval = "0.2"

# Utilities
once_cell = "1.19"
gpui-component-assets = "0.5.1"
global-hotkey = "0.7.0"


# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
] }
clipboard-win = "5.0"
